hphp/test/slow/like_types/like_casts_wrong_class2.php.expectf

Fatal error: Uncaught exception 'TypeAssertionException' with message 'Expected %|{C<_>|C}, got D' in %s/hphp/test/slow/like_types/like_casts_wrong_class2.php:10
Stack trace:
#0 {main}
